force-app/main/default/objects/TNCarSales__c/TNCarSales__c.object-meta.xml
<CustomObject>
    <label>TN Car Sales</label>
    <nameField>
        <displayFormat>TNCS-{0000}</displayFormat>
        <label>TN Car Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TN Car Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>