force-app/main/default/objects/TNCarSales__c/fields/TNCar__c.field-meta.xml
<CustomField>
    <fullName>TNCar__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TN Car</label>
    <referenceTo>TNCar__c</referenceTo>
    <relationshipLabel>TN Car Sales</relationshipLabel>
    <relationshipName>TNCarSales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>