force-app/main/default/objects/TNCarSales__c/fields/TNCarLicence__c.field-meta.xml
<CustomField>
    <fullName>TNCarLicence__c</fullName>
    <formula>TNCar__r.TNCarLicence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Car Licence</label>
    <type>Text</type>
</CustomField>