force-app/main/default/objects/TNCarSales__c/fields/TNCarType__c.field-meta.xml
<CustomField>
    <fullName>TNCarType__c</fullName>
    <formula>TNCar__r.TNCarType__r.externalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Car Type</label>
    <type>Text</type>
</CustomField>