force-app/main/default/objects/TNCarSales__c/fields/TNCountry__c.field-meta.xml
<CustomField>
    <fullName>TNCountry__c</fullName>
    <label>TN Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>