force-app/main/default/objects/TNCarSales__c/fields/TNDate__c.field-meta.xml
<CustomField>
    <fullName>TNDate__c</fullName>
    <label>TN Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>