force-app/main/default/objects/TNCarSales__c/fields/TNMake__c.field-meta.xml
<CustomField>
    <fullName>TNMake__c</fullName>
    <formula>TEXT(TNCar__r.TNCarType__r.TNCarBrand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Make</label>
    <type>Text</type>
</CustomField>