force-app/main/default/objects/TNCarSales__c/fields/TNModel__c.field-meta.xml
<CustomField>
    <fullName>TNModel__c</fullName>
    <formula>TNCar__r.TNCarType__r.TNModel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Model</label>
    <type>Text</type>
</CustomField>