force-app/main/default/objects/TNCarSales__c/fields/TNPrice__c.field-meta.xml
<CustomField>
    <fullName>TNPrice__c</fullName>
    <label>TN Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>