force-app/main/default/objects/TNCarSales__c/fields/TNType__c.field-meta.xml
<CustomField>
    <fullName>TNType__c</fullName>
    <formula>TEXT(TNCar__r.TNCarType__r.TNBodyStyle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Type</label>
    <type>Text</type>
</CustomField>